syntax = "proto3";

option go_package = ".";

package image;

message Nothing {
  bool dummy = 1;
}

message GetPostImagesRequest {
    uint64 postId = 1;
}

message GetPostImagesResponse {
    repeated Image images = 1;
}

message GetImageRequest {
    uint64 imageId = 1;
}

message Image {
	uint64 id = 1;
	string imgLink = 2;
}

service Images {
    rpc GetPostImages(GetPostImagesRequest) returns (GetPostImagesResponse) {}
    rpc GetImage(GetImageRequest) returns (Image) {}
    rpc CreateImage(Image) returns (Nothing) {}
}

